修正点击进入Grid页面
修正一下

--- a/app/src/main/res/layout/activity_an_ui.xml
+++ b/app/src/main/res/layout/activity_an_ui.xml
@@ -28,12 +28,14 @@
         <Button
             android:id="@+id/btn_list_1"
             android:text="ListView"
+            android:layout_marginTop="5dp"
             android:background="@drawable/btnswitch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <Button
             android:id="@+id/btn_grid_1"
             android:text="GridView"
+            android:layout_marginTop="5dp"
             android:background="@drawable/btnswitch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
