增加Slider api最低由7增加至14
增加Slider api最低由7增加至14

--- a/app/src/main/res/layout/activity_an_ui.xml
+++ b/app/src/main/res/layout/activity_an_ui.xml
@@ -47,6 +47,13 @@
             android:background="@drawable/btnswitch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/btn_slider_1"
+            android:text="SliderView"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/btnswitch"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
