--- a/app/src/main/res/layout/activity_slider.xml
+++ b/app/src/main/res/layout/activity_slider.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <io.codetail.widget.RevealFrameLayout
+    <cn.anline.ui.sidemenu.widget.RevealFrameLayout
         android:id="@+id/container_frame"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -29,7 +29,7 @@
             android:minHeight="?attr/actionBarSize"
             android:background="?attr/colorPrimary"/>
 
-    </io.codetail.widget.RevealFrameLayout>
+    </cn.anline.ui.sidemenu.widget.RevealFrameLayout>
 
     <ScrollView
         android:id="@+id/scrollView"
