--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<io.codetail.widget.RevealFrameLayout
+<cn.anline.ui.sidemenu.widget.RevealFrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -17,4 +17,4 @@
             android:layout_height="match_parent"/>
 
     </FrameLayout>
-</io.codetail.widget.RevealFrameLayout>
+</cn.anline.ui.sidemenu.widget.RevealFrameLayout>
