--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,13 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="sliding_menu_width">80dp</dimen>
+    <dimen name="slv_item_height">66dip</dimen>
+    <dimen name="slv_item_height2">90dip</dimen>
+
+    <dimen name="slv_item_bg_btn_width">48dip</dimen>
+    <dimen name="slv_item_bg_btn2_width">60dip</dimen>
+    <dimen name="slv_item_bg_btn_width_img">100dip</dimen>
+
+    <dimen name="txt_size">7sp</dimen>
+    <dimen name="txt_qq">5sp</dimen>
 </resources>
