--- a/app/src/main/res/layout/activity_slider.xml
+++ b/app/src/main/res/layout/activity_slider.xml
@@ -14,14 +14,14 @@
             android:id="@+id/content_overlay"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"/>
 
             <LinearLayout
                 android:id="@+id/content_frame"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"/>
-        </LinearLayout>
+        <!--</LinearLayout>-->
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
