--- a/app/src/main/res/layout/activity_an_ui.xml
+++ b/app/src/main/res/layout/activity_an_ui.xml
@@ -61,6 +61,13 @@
             android:background="@drawable/btnswitch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/btn_tab_bar_1"
+            android:text="TabBarView"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/btnswitch"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
