--- a/app/src/main/res/layout/activity_an_ui.xml
+++ b/app/src/main/res/layout/activity_an_ui.xml
@@ -5,21 +5,21 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="cn.anline.ui.AnUIActivity">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
-    <EditText android:id="@+id/edit_message"
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/edit_message" />
-    <Button
-        android:id="@+id/btn_send1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/button_send" />
-</LinearLayout>
+<!--<LinearLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:orientation="horizontal">-->
+    <!--<EditText android:id="@+id/edit_message"-->
+        <!--android:layout_weight="1"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:hint="@string/edit_message" />-->
+    <!--<Button-->
+        <!--android:id="@+id/btn_send1"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="@string/button_send" />-->
+<!--</LinearLayout>-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -78,6 +78,13 @@
         <Button
             android:id="@+id/btn_micro_video"
             android:text="MicroVideo"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/btnswitch"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/btn_anui_2"
+            android:text="下一页"
             android:layout_marginTop="5dp"
             android:background="@drawable/btnswitch"
             android:layout_width="match_parent"
