--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="transparent">#00000000</color>
     <color name="navpage">#FFE1E8EB</color>
     <color name="pink">#a403d1</color>
+    <color name="color_shenhui">#ff999999</color>
 </resources>
