--- a/app/src/main/res/layout/activity_an_ui2.xml
+++ b/app/src/main/res/layout/activity_an_ui2.xml
@@ -8,6 +8,7 @@
     <Button
         android:id="@+id/btn_tagview"
         android:text="TagView"
+        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/btnswitch"/>
