添加了Windows Phone布局 UI
添加了Windows Phone 8布局 UI

--- a/app/src/main/res/layout/activity_an_ui2.xml
+++ b/app/src/main/res/layout/activity_an_ui2.xml
@@ -6,9 +6,25 @@
     tools:context="cn.anline.ui.AnUI2Activity">
 
     <Button
+        android:id="@+id/back_first_ui"
+        android:text="上一页"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/btnswitch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <Button
         android:id="@+id/btn_tagview"
         android:text="TagView"
         android:layout_marginTop="5dp"
+        android:layout_below="@+id/back_first_ui"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/btnswitch"/>
+    <Button
+        android:id="@+id/btn_wpui"
+        android:text="WpUIView"
+        android:layout_marginTop="5dp"
+        android:layout_below="@+id/btn_tagview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/btnswitch"/>
