--- a/app/src/main/res/layout/activity_an_ui2.xml
+++ b/app/src/main/res/layout/activity_an_ui2.xml
@@ -37,4 +37,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/btnswitch"/>
+    <Button
+        android:id="@+id/btn_viewpager_1"
+        android:text="ViewPager"
+        android:layout_marginTop="5dp"
+        android:layout_below="@+id/btn_browser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/btnswitch"/>
 </RelativeLayout>
