修复Viewpager子view的控件监听事件

--- a/app/src/main/res/layout/activity_tab_bar_appstore.xml
+++ b/app/src/main/res/layout/activity_tab_bar_appstore.xml
@@ -12,17 +12,9 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="132dp"
-        android:src="@drawable/content_films" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/imageView2"
         android:src="@drawable/q13"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="101dp" />
 </RelativeLayout>
